# scanner_mk

./: install_frappe_cli.sh  setup.py
.github_bak/workflows/: ci.yml
desktop_icon/: invoice_automation.json
erpnext_scanner_mk/: hooks.py
scanner_mk/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
scanner_mk/erpnext_scanner_mk/workspace/invoice_automation/: invoice_automation.json
scanner_mk/scanner_mk/doctype/intake_processing_log/: __init__.py  intake_processing_log.json
scanner_mk/scanner_mk/doctype/invoice_intake_log/: invoice_intake_log.js  invoice_intake_log.json  invoice_intake_log.py
scanner_mk/scanner_mk/doctype/invoice_intake_settings/: __init__.py
scanner_mk/scanner_mk/integrations/: ai_client.py
scanner_mk/scanner_mk/scanner_mk/: pyproject.toml
scanner_mk/scanner_mk/scanner_mk/desktop_icon/: invoice_automation.json
scanner_mk/scanner_mk/scanner_mk/scanner_mk/doctype/intake_processing_log/: intake_processing_log.py
scanner_mk/scanner_mk/scanner_mk/scanner_mk/doctype/invoice_intake_log/: __init__.py  invoice_intake_log.py
scanner_mk/scanner_mk/scanner_mk/scanner_mk/doctype/invoice_intake_settings/: invoice_intake_settings.json  invoice_intake_settings.py
scanner_mk/scanner_mk/scanner_mk/scanner_mk/utils/: test_pipeline.py
scanner_mk/scanner_mk/scanner_mk/workspace_sidebar/: invoice_automation.json
scanner_mk/scanner_mk/scanner_mk/www/: scanner_mk.py
scanner_mk/scanner_mk/utils/: ocr.py  processor.py  test_pipeline.py
workspace_sidebar/: invoice_automation.json
www/: scanner_mk.html
(+19 files in other folders)
