[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erpnext_scanner_mk"
version = "0.1.0"
description = "A brief description of the project."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]