[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanner_mk"
version = "1.0.0"
description = "ERPNext Scanner MK - Automatic invoice recognition and processing"
authors = [
    {name = "Tik13 GmbH", email = "mike@tik13.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "rapidfuzz>=2.0.0",
    "Pillow>=8.0.0",
    "pytesseract>=0.3.8",
    "pdf2image>=1.16.0",
]

[tool.setuptools]
packages = ["scanner_mk", "scanner_mk.*"]
include-package-data = true
